--- a/WebSiteClothesStore/Views/Home/HeaderOfLayoutPartial.cshtml
+++ b/WebSiteClothesStore/Views/Home/HeaderOfLayoutPartial.cshtml
@@ -244,6 +244,10 @@
         justify-content: center;
     }
 
+    .header {
+        background-color: #111 !important;
+    }
+
     .logoHeader--item {
         margin: 0 20px;
         font-size: 30px;
@@ -307,6 +311,7 @@
 
     .header_hover {
         position: relative;
+        background-color: black;
     }
 
         .header_hover:before {
@@ -328,6 +333,7 @@
 
     .mucluc-item__qr:hover .header_hover {
         display: block;
+        background-color: black;
     }
 
     .row3 {
@@ -354,9 +360,11 @@
     .mucluc {
         list-style: none;
         display: flex;
-        color: lightgray;
+        color: white;
         font-size: 20px;
         position: relative;
+        color: #f3f3f4;
+        text-decoration: none !important;
     }
 
     .mucluc-item {
@@ -388,7 +396,8 @@
     body {
         margin: 0;
         padding: 0;
-        background-color: #E0FFFF;
+        background-color: white;
+        box-sizing: border-box;
     }
 
     :root {
@@ -458,7 +467,7 @@
         /*position: fixed;*/
         width: 100%;
         /* background-color: #4ABDAB*/
-        background-image: linear-gradient(0, #0E9599, #0F4EA5);
+
         line-height: 60px;
     }
 
@@ -488,7 +497,7 @@
         left: 0;
         width: 30%;
         height: 70%;
-        background-color: aliceblue;
+        background-color: white;
         position: fixed;
         left: 50%;
         transform: translateX(-50%);
@@ -594,7 +603,6 @@
         left: 50%;
         background-color: lightyellow;
     }
-
 </style>
 <script>
 
