--- a/WebSiteClothesStore/Content/css/ProductLayout.css
+++ b/WebSiteClothesStore/Content/css/ProductLayout.css
@@ -1,12 +1,18 @@
 ﻿body {
 }
-.container-products{
 
+.container-products {
+    margin: 70px;
 }
-.container{
 
-    width:95%;
+.container {
+    width: 95%;
 }
-.col-category{
-    margin-top:13px;
+
+.col-category {
+    margin-top: 13px;
+}
+
+footer {
+    margin-top: 120px;
 }
