--- a/WebSiteClothesStore/Views/DanhMuc/ListDanhMuc.cshtml
+++ b/WebSiteClothesStore/Views/DanhMuc/ListDanhMuc.cshtml
@@ -25,31 +25,43 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.TenLoai)
-        </td>
-        <td>
-            <img src="@item.Logo" width="200px" height="200px" alt="hinh thumbnail" />
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BiDanh)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.MaLoai }) |            
-            @Html.ActionLink("Delete", "Delete", new { id=item.MaLoai })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.TenLoai)
+            </td>
+            <td>
+                <img src="@item.Logo" width="200px" height="200px" alt="hinh thumbnail" />
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BiDanh)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.MaLoai }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.MaLoai })
+            </td>
+        </tr>
+    }
 
 </table>
 
 <style>
     .table {
         width: 960px;
-        border: 1px solid #333;
+        border: 2px solid#000000;
         padding: 10px;
     }
-    
+
+    .table {
+        border: 2px solid #000000;
+    }
+
+    th {
+        border: 1px solid black;
+    }
+
+    td {
+        border: 1px solid black;
+    }
 </style>
